# citation-key-auditor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: GITHUB_ACTIONS.md  GITHUB_PUBLISHING.md  MAINTAINER_GUIDE.md  OPEN_SOURCE_MAINTAINER_PLAN.md  QUARTO.md  VALIDATION.md
examples/: manuscript.md  quarto-paper.qmd  references.bib
src/citation_key_auditor/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
