[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-key-auditor"
version = "0.1.0"
description = "Check Markdown and LaTeX citation keys against BibTeX files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Citation Key Auditor maintainers" }
]
keywords = ["bibtex", "citations", "markdown", "latex", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/citation-key-auditor"
Issues = "https://github.com/YOUR-USERNAME/citation-key-auditor/issues"

[project.scripts]
citation-key-audit = "citation_key_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
